[metadata]
name = weather-checker
version = 0.0.1
author = Edwin Żurawik
author_email = ezurawik35@gmail.com
description = commandline weather checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EdwinZurawik/weather-checker
project_urls =
    Bug Tracker = https://github.com/EdwinZurawik/weather-checker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
